<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="185dp"
        android:layout_height="59dp"
        android:text="@string/TituloActivityMain"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textViewPreguntas"
        android:layout_width="296dp"
        android:layout_height="133dp"
        android:layout_marginTop="159dp"
        android:layout_marginBottom="545dp"
        android:text="@string/textviewPreguntaActual"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.641"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="304dp"
        android:layout_height="252dp"
        android:contentDescription="@string/descripcionimagen"
        android:src="@drawable/madrid_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="335dp"
        android:layout_height="157dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.909"
        tools:ignore="TextSizeCheck">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/optionButtonA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionButtonAContent" />

            <TextView
                android:id="@+id/textViewOptionA"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/textViewOptionA"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/optionButtonB"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:text="@string/optionButtonBContent" />

            <TextView
                android:id="@+id/textViewOptionB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/textViewOptionB"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/optionButtonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optionButtonCContent" />

            <TextView
                android:id="@+id/textViewOptionC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/textViewOptionC"
                tools:ignore="RtlSymmetry" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>